@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.460 2005/11/06 06:27:32 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.461 2005/11/06 17:58:31 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py:
+  initial generic disk support
 
   6 Nov 2005; Preston Cody <codeman@gentoo.org>
   webgli: Partitioning making progress.
